# margaret

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
app/: __init__.py  adapters.py  config.py  location_context.py  main.py  models.py  rag_memory.py  security.py  store.py
app/slack/: __init__.py  handlers.py  models.py  service.py
app/voice/: __init__.py  documents.py  handlers.py  service.py
tests/: test_adapters.py  test_concurrency.py  test_gateway.py  test_rag_memory.py  test_slack.py  test_ws_phone.py
