[project]
name = "margaret-gateway"
version = "0.1.0"
description = "Local REST+SSE gateway for Margaret agent sessions"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "slack-bolt>=1.19.0",
    "aiohttp>=3.9.0",
    "openai>=1.50.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
